--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ MYSQL_PASS="Welive@2017"
 SHOPIFY_APIKEY="df31641adc1f7657cd3ada87e768c17c"
 SHOPIFY_SECRET="c846b936f38c1ee3fe6ec7fbbaef7348"
 SHOPIFY_SCOPES="read_products,write_products,read_customers,read_orders,write_customers,read_script_tags,write_script_tags"
-SHOPIFY_REDIRECT_URI="http://nextgendeveloper.com/shopify-tester-master/login.php"
+SHOPIFY_REDIRECT_URI="https://social-demo1.herokuapp.com/oauth.php"
